--- a/my-blog-rest-api/src/main/resources/application.properties
+++ b/my-blog-rest-api/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.database=mysql
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+jwt.custom.key=phamcanlong992000
+jwt.custom.expired=86400000
