trien khai docker cho microservice

--- a/my-blog-gateway/pom.xml
+++ b/my-blog-gateway/pom.xml
@@ -73,6 +73,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<mainClass>com.longpc.mybloggateway.MyBlogGatewayApplication</mainClass>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
