--- a/my-blog-naming/pom.xml
+++ b/my-blog-naming/pom.xml
@@ -68,6 +68,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<mainClass>com.longpc.myblognaming.MyBlogNamingApplication</mainClass>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
