--- a/my-blog-send-email/pom.xml
+++ b/my-blog-send-email/pom.xml
@@ -60,6 +60,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<mainClass>com.longpc.myblogsendemail.MyBlogSendEmailApplication</mainClass>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
