--- a/my-blog-gateway/src/main/resources/application.yaml
+++ b/my-blog-gateway/src/main/resources/application.yaml
@@ -27,6 +27,6 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://my-blog-naming:8761/eureka
   instance:
     hostname: localhost
