--- a/my-blog-rest-api/src/main/resources/application.properties
+++ b/my-blog-rest-api/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8081
 server.servlet.context-path=/api
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://my-blog-naming:8761/eureka
 spring.application.name=rest-service
-spring.datasource.url=jdbc:mysql://localhost:3306/myblog
+spring.datasource.url=jdbc:mysql://mysql-db:3306/myblog
 spring.datasource.username=root
 spring.datasource.password=Goboi123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -13,5 +13,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 jwt.custom.key=phamcanlong992000
 jwt.custom.expired=86400000
-eureka.instance.hostname=localhost
+eureka.instance.hostname=my-blog-rest-api
 spring.cloud.discovery.enabled=true
