--- a/my-blog-send-email/src/main/resources/application.properties
+++ b/my-blog-send-email/src/main/resources/application.properties
@@ -5,4 +5,5 @@ config.mail.password=Goboi123
 server.servlet.context-path=/mail
 server.port=8082
 spring.application.name=mail-service
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://my-blog-naming:8761/eureka
+eureka.instance.hostname=my-blog-send-email
