--- a/my-blog-naming/src/main/resources/application.properties
+++ b/my-blog-naming/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.application.name=naming-service
 server.port=8761
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-eureka.instance.hostname=localhost
+eureka.instance.hostname=my-blog-naming
