update config with docker var environment

--- a/my-blog-rest-api/src/main/resources/application.properties
+++ b/my-blog-rest-api/src/main/resources/application.properties
@@ -15,3 +15,4 @@ jwt.custom.key=phamcanlong992000
 jwt.custom.expired=86400000
 eureka.instance.hostname=my-blog-rest-api
 spring.cloud.discovery.enabled=true
+host.uri=${HOST_URI}
