--- a/my-blog-send-email/src/main/resources/application.properties
+++ b/my-blog-send-email/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 config.mail.host=smtp.gmail.com
 config.mail.port=587
-config.mail.username=phamlong992k@gmail.com
-config.mail.password=Goboi123
+config.mail.username=${EMAIl_USER}
+config.mail.password=${EMAIL_PASSWORD}
 server.servlet.context-path=/mail
 server.port=8082
 spring.application.name=mail-service
