--- a/my-blog-rest-api/src/main/resources/application.properties
+++ b/my-blog-rest-api/src/main/resources/application.properties
@@ -14,5 +14,8 @@ spring.jpa.show-sql=true
 jwt.custom.key=phamcanlong992000
 jwt.custom.expired=86400000
 eureka.instance.hostname=my-blog-rest-api
+eureka.instance.prefer-ip-address=true
 spring.cloud.discovery.enabled=true
 host.uri=${HOST_URI}
+host.frontend.uri=${HOST_FRONTEND_URI}
+#host.uri=http://localhost:8080
