--- a/my-blog-gateway/src/main/resources/application.yaml
+++ b/my-blog-gateway/src/main/resources/application.yaml
@@ -25,6 +25,10 @@ spring:
 
 server:
   port: 8765
+  ssl:
+    key-store: ${KEY_STORE}
+    key-store-password: ${KEY_STORE_PASSWORD}
+    key-store-type: ${KEY_STORE_TYPE}
 eureka:
   client:
     serviceUrl:
