--- a/my-blog-rest-api/src/main/resources/application.properties
+++ b/my-blog-rest-api/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 server.port=8081
 server.servlet.context-path=/api
 eureka.client.serviceUrl.defaultZone=http://my-blog-naming:8761/eureka
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name=rest-service
 spring.datasource.url=jdbc:mysql://mysql-db:3306/myblog
+#spring.datasource.url=jdbc:mysql://localhost:3306/myblog
 spring.datasource.username=root
 spring.datasource.password=Goboi123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -19,3 +21,4 @@ spring.cloud.discovery.enabled=true
 host.uri=${HOST_URI}
 host.frontend.uri=${HOST_FRONTEND_URI}
 #host.uri=http://localhost:8080
+#host.frontend.uri=http://localhost:3000
